[package]
name = "todo-md-rs"
version = "0.1.0"
edition = "2021"
description = "todo cli program to interact with Markdown files "
[[bin]]
name = "todo"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.5.3", features = ["derive"] }
colored = "2.1.0"
config = "0.13.3"
dirs = "5.0.1"
lazy_static = "1.4.0"
regex = "1.10.2"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
toml = "0.8.6"
